# cryoet-data-portal-neuroglancer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.github/workflows/: py-formatting.yml  py-test.yml  release.yml
cryoet_data_portal_neuroglancer/: chunk.py  igneous_patch.py  io.py  sharding.py  state_generator.py  url_creation.py  utils.py
cryoet_data_portal_neuroglancer/models/: annotation_encoder.py  json_generator.py  shader_builder.py
cryoet_data_portal_neuroglancer/precompute/: __init__.py  contrast_limits.py  glb_meshes.py  instance_mesh.py  mesh.py  points.py  segmentation_mask.py  segmentation_properties.py  volume_rendering.py
cryoet_data_portal_neuroglancer/shaders/: annotation.py  image.py  shader_builder.py
cryoet_data_portal_neuroglancer/state/: state_generator.py
manual_tests/: contrast_limits_from_api.py  many_mesh_to_precompute.py  screenshot_urls.py  segmentation_from_api.py  single_mesh_to_precompute.py  tuning_contrast_limits_from_api.py  volume_contrast_limits.py
tests/: test_contrast_limits.py  test_mesh.py  test_segmentation_encoding.py  test_shader.py  test_state_generators.py  test_utils.py
